deploy/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: penguin-web-ingress
  namespace: penguin
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: devjk.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend :
          service:
            name: penguin
            port:
              number: 8080
